Complete simple service

--- a/src/jupyter_notebooks/ml_system_design_model.ipynb
+++ b/src/jupyter_notebooks/ml_system_design_model.ipynb
@@ -7,12 +7,10 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
     "import pandas as pd\n",
     "\n",
-    "sys.path.append(\"..\")\n",
-    "from utils import conf\n",
-    "from library.cleaner import clear\n",
+    "from src.library.cleaner import clear\n",
+    "from src.utils import conf\n",
     "\n",
     "plt.style.use(\"ggplot\")"
    ]
